# Viman

./: .gitignore  db.sqlite3  manage.py  pyproject.toml
.github/workflows/: django.yml
catalog/: admin.py  models.py  views.py
catalog/migrations/: 0001_initial.py  0002_auto_20200409_1629.py  0003_auto_20200411_1918.py
catalog/templates/catalog/: index.html
viman/: asgi.py  settings.py  urls.py  wsgi.py
