[tool.poetry]
name = "viman"
version = "0.1.0"
description = ""
authors = ["formindev <formindeve@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.5"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
